add totalproducts index - no control over negative quantity

--- a/CustomerDataset.ipynb
+++ b/CustomerDataset.ipynb
@@ -184,17 +184,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique customers:  4339\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the dataframe for customers\n",
-    "data = pd.core.frame.DataFrame({'CustomerID' : df['CustomerID'].unique()})"
+    "data = pd.core.frame.DataFrame({'CustomerID' : df['CustomerID'].unique()})\n",
+    "print(\"Number of unique customers: \", len(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -204,7 +213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d18513a259148a5b5179fce1029f347",
+       "model_id": "1e0eaa7bc6834ca68145a3344be04f24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,12 +237,12 @@
     "total_products = []\n",
     "for customer in tqdm(df['CustomerID'].unique(), total=len(data), desc=\"Iterating over customers\"):\n",
     "    unique_products.append(len(df.loc[df['CustomerID'] == customer, ['ProdID']].drop_duplicates()))\n",
-    "    #total_products.append(sum(qta for each product of customer))"
+    "    total_products.append(sum(x for x in df.loc[df['CustomerID'] == customer, ['Qta']]['Qta']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -478,55 +487,41 @@
        "      <th>CustomerID</th>\n",
        "      <th>TProds</th>\n",
        "      <th>DProds</th>\n",
-       "      <th>Imax</th>\n",
-       "      <th>E</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>17850</td>\n",
-       "      <td>305</td>\n",
+       "      <td>1702</td>\n",
        "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>13047</td>\n",
-       "      <td>195</td>\n",
+       "      <td>1356</td>\n",
        "      <td>106</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>12583</td>\n",
-       "      <td>251</td>\n",
+       "      <td>5009</td>\n",
        "      <td>115</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>13748</td>\n",
-       "      <td>28</td>\n",
+       "      <td>439</td>\n",
        "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>15100</td>\n",
-       "      <td>6</td>\n",
+       "      <td>58</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -534,66 +529,56 @@
        "    <tr>\n",
        "      <th>4334</th>\n",
        "      <td>13436</td>\n",
+       "      <td>76</td>\n",
        "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4335</th>\n",
        "      <td>15520</td>\n",
+       "      <td>314</td>\n",
        "      <td>18</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4336</th>\n",
        "      <td>13298</td>\n",
+       "      <td>96</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4337</th>\n",
        "      <td>14569</td>\n",
-       "      <td>12</td>\n",
+       "      <td>79</td>\n",
        "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4338</th>\n",
        "      <td>12713</td>\n",
+       "      <td>508</td>\n",
        "      <td>38</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4339 rows × 5 columns</p>\n",
+       "<p>4339 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CustomerID  TProds  DProds  Imax  E\n",
-       "0          17850     305      21     0  0\n",
-       "1          13047     195     106     0  0\n",
-       "2          12583     251     115     0  0\n",
-       "3          13748      28      24     0  0\n",
-       "4          15100       6       1     0  0\n",
-       "...          ...     ...     ...   ... ..\n",
-       "4334       13436      12      12     0  0\n",
-       "4335       15520      18      18     0  0\n",
-       "4336       13298       2       2     0  0\n",
-       "4337       14569      12      10     0  0\n",
-       "4338       12713      38      38     0  0\n",
+       "      CustomerID  TProds  DProds\n",
+       "0          17850    1702      21\n",
+       "1          13047    1356     106\n",
+       "2          12583    5009     115\n",
+       "3          13748     439      24\n",
+       "4          15100      58       1\n",
+       "...          ...     ...     ...\n",
+       "4334       13436      76      12\n",
+       "4335       15520     314      18\n",
+       "4336       13298      96       2\n",
+       "4337       14569      79      10\n",
+       "4338       12713     508      38\n",
        "\n",
-       "[4339 rows x 5 columns]"
+       "[4339 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
