--- a/CustomerDataset.ipynb
+++ b/CustomerDataset.ipynb
@@ -11,7 +11,8 @@
     "import pandas as pd\n",
     "import scipy.stats as stats\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm"
+    "from tqdm.notebook import tqdm\n",
+    "import statistics as stat"
    ]
   },
   {
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,17 +204,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TProd - handle negative Qta\n",
+    "# TSale - handle negativa Qta\n",
+    "\n",
+    "# otptimize code, iteration over same object multiple times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stat.fmean([x for x in range(1,101)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e0eaa7bc6834ca68145a3344be04f24",
+       "model_id": "371fdd52a72045e39ce93653998a474a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,30 +268,28 @@
    ],
    "source": [
     "unique_products = []\n",
+    "unique_products_ret = []\n",
     "total_products = []\n",
+    "total_sale = []\n",
+    "total_sale_wret = []\n",
+    "total_returned = []\n",
+    "min_spent = []\n",
+    "max_spent = []\n",
+    "total_orders = []\n",
+    "mean_prod_sale = []\n",
     "for customer in tqdm(df['CustomerID'].unique(), total=len(data), desc=\"Iterating over customers\"):\n",
     "    unique_products.append(len(df.loc[df['CustomerID'] == customer, ['ProdID']].drop_duplicates()))\n",
-    "    total_products.append(sum(x for x in df.loc[df['CustomerID'] == customer, ['Qta']]['Qta']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I: the total number of items purchased by a customer during the period of observation.\n",
-    "data['TProds'] = total_products"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Iu: the number of distinct items bought by a customer in the period of observation.\n",
-    "data['DProds'] = unique_products"
+    "    unique_products_ret.append(len(df.loc[(df['CustomerID'] == customer) & (df['Qta'] < 0), ['ProdID']].drop_duplicates()))\n",
+    "    total_orders.append(len(df.loc[(df['CustomerID'] == customer) & (df['Qta'] > 0), ['BasketID']].drop_duplicates()))\n",
+    "    \n",
+    "    total_products.append(sum(x for x in df.loc[df['CustomerID'] == customer, ['Qta']]['Qta']))\n",
+    "    total_returned.append(sum(1 for x in df.loc[df['CustomerID'] == customer, ['Qta']]['Qta'] if x<0))\n",
+    "    \n",
+    "    total_sale.append(sum(r['Qta']*r['Sale'] for _, r in df.loc[df['CustomerID'] == customer, ['Qta', 'Sale']].iterrows()))\n",
+    "    total_sale_wret.append(sum(r['Qta']*r['Sale'] for _, r in df.loc[df['CustomerID'] == customer, ['Qta', 'Sale']].iterrows() if r['Qta']>0))\n",
+    "    min_spent.append(min(r['Qta']*r['Sale'] for _, r in df.loc[df['CustomerID'] == customer, ['Qta', 'Sale']].iterrows() if r['Qta'] > 0))\n",
+    "    max_spent.append(max(r['Qta']*r['Sale'] for _, r in df.loc[df['CustomerID'] == customer, ['Qta', 'Sale']].iterrows() if r['Qta'] > 0))\n",
+    "    mean_prod_sale.append(stat.fmean(r['Sale'] for _, r in df.loc[df['CustomerID'] == customer, ['Qta', 'Sale']].iterrows() if r['Qta'] > 0))"
    ]
   },
   {
@@ -266,8 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imax: the maximum number of items purchased by a customer during a shopping session\n",
-    "data['Imax'] = 0"
+    "# I: the total number of items purchased by a customer during the period of observation.\n",
+    "data['TProd'] = total_products"
    ]
   },
   {
@@ -276,8 +308,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# E: the Shannon entropy on the purchasing behaviour of the customer\n",
-    "data['E'] = 0"
+    "# Iu: the number of distinct items bought by a customer in the period of observation.\n",
+    "data['DProd'] = unique_products"
    ]
   },
   {
@@ -286,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ProdPerOrderMean: mean number of items purchased by a customer during a shopping session"
+    "# Imax: the maximum number of items purchased by a customer during a shopping session"
    ]
   },
   {
@@ -295,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SaleTot: total amount spent during the period of observation"
+    "# E: the Shannon entropy on the purchasing behaviour of the customer"
    ]
   },
   {
@@ -304,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SaleTotWithoutReturn: total amount spent without negative quantity during the period of observation"
+    "# ProdPerOrderMean: mean number of items purchased by a customer during a shopping session"
    ]
   },
   {
@@ -313,7 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SaleMin: min amout spent during the shopping session"
+    "# SaleTot: total amount spent during the period of observation\n",
+    "data['TSale'] = total_sale"
    ]
   },
   {
@@ -322,7 +355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SaleMeanPerOrder: mean amount spent for each order during the period of observation"
+    "# SaleTotWithoutReturn: total amount spent without negative quantity during the period of observation\n",
+    "data['TSaleWRet'] = total_sale_wret"
    ]
   },
   {
@@ -331,7 +365,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NumRetProd: number of returned products in the period of observation"
+    "# SaleMin: min amount spent during the shopping session\n",
+    "data['MinSale'] = min_spent"
    ]
   },
   {
@@ -340,7 +375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NumDistRetProd: number of distinct returned products in the period of observation"
+    "# SaleMax: max amount spent during the shopping session\n",
+    "data['MaxSale'] = max_spent"
    ]
   },
   {
@@ -349,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MeanProdCostInOrder: mean cost of the products in the order"
+    "# SaleMeanPerOrder: mean amount spent for each order during the period of observation"
    ]
   },
   {
@@ -358,7 +394,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OrderPerMonth"
+    "# NumRetProd: number of returned products in the period of observation\n",
+    "data['TRProd'] = total_returned"
    ]
   },
   {
@@ -367,7 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ProductPerMonth"
+    "# NumDistRetProd: number of distinct returned products in the period of observation\n",
+    "data['TRDProd'] = unique_products_ret"
    ]
   },
   {
@@ -376,7 +414,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PrizePerMonth"
+    "# MeanProdCostInOrder: mean cost of the products in the orders\n",
+    "data['MeanProdSale'] = mean_prod_sale"
    ]
   },
   {
@@ -385,7 +424,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OrderPerTrimester"
+    "# NumberOfOrders: total number of orders made by customer\n",
+    "data['TOrder'] = total_orders"
    ]
   },
   {
@@ -394,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ProductPerTrimester"
+    "# OrderPerMonth"
    ]
   },
   {
@@ -403,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PrizePerTrimester"
+    "# ProductPerMonth"
    ]
   },
   {
@@ -412,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OrderPerTrimester 2-3"
+    "# PrizePerMonth"
    ]
   },
   {
@@ -421,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ProductPerTrimester 2-3"
+    "# OrderPerTrimester"
    ]
   },
   {
@@ -430,12 +470,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PrizePerTrimester 2-3"
+    "# ProductPerTrimester"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PrizePerTrimester"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OrderPerTrimester 2-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ProductPerTrimester 2-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PrizePerTrimester 2-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -485,8 +561,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>CustomerID</th>\n",
-       "      <th>TProds</th>\n",
-       "      <th>DProds</th>\n",
+       "      <th>TProd</th>\n",
+       "      <th>DProd</th>\n",
+       "      <th>TSale</th>\n",
+       "      <th>TSaleWRet</th>\n",
+       "      <th>MinSale</th>\n",
+       "      <th>MaxSale</th>\n",
+       "      <th>TRProd</th>\n",
+       "      <th>TRDProd</th>\n",
+       "      <th>MeanProdSale</th>\n",
+       "      <th>TOrder</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -495,33 +579,81 @@
        "      <td>17850</td>\n",
        "      <td>1702</td>\n",
        "      <td>21</td>\n",
+       "      <td>5317.89</td>\n",
+       "      <td>5391.21</td>\n",
+       "      <td>6.36</td>\n",
+       "      <td>107.25</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.960370</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>13047</td>\n",
        "      <td>1356</td>\n",
        "      <td>106</td>\n",
+       "      <td>3094.05</td>\n",
+       "      <td>3237.54</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>68.00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3.932035</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>12583</td>\n",
        "      <td>5009</td>\n",
        "      <td>115</td>\n",
+       "      <td>7187.34</td>\n",
+       "      <td>7281.38</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>132.80</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.103603</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>13748</td>\n",
        "      <td>439</td>\n",
        "      <td>24</td>\n",
+       "      <td>948.25</td>\n",
+       "      <td>948.25</td>\n",
+       "      <td>9.36</td>\n",
+       "      <td>204.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.996429</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>15100</td>\n",
        "      <td>58</td>\n",
        "      <td>1</td>\n",
+       "      <td>635.10</td>\n",
+       "      <td>876.00</td>\n",
+       "      <td>175.20</td>\n",
+       "      <td>350.40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.950000</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -531,54 +663,107 @@
        "      <td>13436</td>\n",
        "      <td>76</td>\n",
        "      <td>12</td>\n",
+       "      <td>196.89</td>\n",
+       "      <td>196.89</td>\n",
+       "      <td>10.20</td>\n",
+       "      <td>25.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.830000</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4335</th>\n",
        "      <td>15520</td>\n",
        "      <td>314</td>\n",
        "      <td>18</td>\n",
+       "      <td>343.50</td>\n",
+       "      <td>343.50</td>\n",
+       "      <td>9.48</td>\n",
+       "      <td>34.68</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.724444</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4336</th>\n",
        "      <td>13298</td>\n",
        "      <td>96</td>\n",
        "      <td>2</td>\n",
+       "      <td>360.00</td>\n",
+       "      <td>360.00</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>270.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4337</th>\n",
        "      <td>14569</td>\n",
        "      <td>79</td>\n",
        "      <td>10</td>\n",
+       "      <td>227.39</td>\n",
+       "      <td>227.39</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>122.40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.920000</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4338</th>\n",
        "      <td>12713</td>\n",
        "      <td>508</td>\n",
        "      <td>38</td>\n",
+       "      <td>848.55</td>\n",
+       "      <td>848.55</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>71.70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.503421</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4339 rows × 3 columns</p>\n",
+       "<p>4339 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CustomerID  TProds  DProds\n",
-       "0          17850    1702      21\n",
-       "1          13047    1356     106\n",
-       "2          12583    5009     115\n",
-       "3          13748     439      24\n",
-       "4          15100      58       1\n",
-       "...          ...     ...     ...\n",
-       "4334       13436      76      12\n",
-       "4335       15520     314      18\n",
-       "4336       13298      96       2\n",
-       "4337       14569      79      10\n",
-       "4338       12713     508      38\n",
+       "      CustomerID  TProd  DProd    TSale  TSaleWRet  MinSale  MaxSale  TRProd  \\\n",
+       "0          17850   1702     21  5317.89    5391.21     6.36   107.25       8   \n",
+       "1          13047   1356    106  3094.05    3237.54     4.95    68.00      23   \n",
+       "2          12583   5009    115  7187.34    7281.38     6.80   132.80       4   \n",
+       "3          13748    439     24   948.25     948.25     9.36   204.00       0   \n",
+       "4          15100     58      1   635.10     876.00   175.20   350.40       3   \n",
+       "...          ...    ...    ...      ...        ...      ...      ...     ...   \n",
+       "4334       13436     76     12   196.89     196.89    10.20    25.50       0   \n",
+       "4335       15520    314     18   343.50     343.50     9.48    34.68       0   \n",
+       "4336       13298     96      2   360.00     360.00    90.00   270.00       0   \n",
+       "4337       14569     79     10   227.39     227.39     1.65   122.40       0   \n",
+       "4338       12713    508     38   848.55     848.55     5.04    71.70       0   \n",
        "\n",
-       "[4339 rows x 3 columns]"
+       "      TRDProd  MeanProdSale  TOrder  \n",
+       "0           6      3.960370      34  \n",
+       "1          20      3.932035      10  \n",
+       "2           4      3.103603      15  \n",
+       "3           0      3.996429       5  \n",
+       "4           1     10.950000       3  \n",
+       "...       ...           ...     ...  \n",
+       "4334        0      5.830000       1  \n",
+       "4335        0      1.724444       1  \n",
+       "4336        0      3.750000       1  \n",
+       "4337        0      3.920000       1  \n",
+       "4338        0      2.503421       1  \n",
+       "\n",
+       "[4339 rows x 11 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
