Changed DataUnderstanding_DataCleaning.ipynb into DataUnderstanding_DataPreparation.ipynb according to the pdf

--- a/DataUnderstanding_DataPreparation.ipynb
+++ b/DataUnderstanding_DataPreparation.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Data Understanding and Data Cleaning"
+    "# Data Understanding and Data Preparation"
    ]
   },
   {
