added discount handling by GUG

--- a/CustomerDataset.ipynb
+++ b/CustomerDataset.ipynb
@@ -255,24 +255,38 @@
     "max_prod_spent = []\n",
     "total_orders = []\n",
     "mean_prod_sale = []\n",
+    "\n",
+    "#Discount shouldn't be part of products bought nor returned \n",
     "for customer in tqdm(df['CustomerID'].unique(), total=len(data), desc=\"Iterating over customers\"):\n",
     "    # use set ?\n",
-    "    unique_products.append(len(df.loc[df['CustomerID'] == customer, ['ProdID']].drop_duplicates()))\n",
-    "    unique_products_ret.append(len(df.loc[(df['CustomerID'] == customer) & (df['Qta'] < 0), ['ProdID']].drop_duplicates()))\n",
+    "    # dividing filters instead of conjuncting them is MUCH FASTER\n",
+    "    df_temp = df.loc[df['CustomerID'] == customer, ['ProdID']].drop_duplicates()\n",
+    "    unique_products.append(len(df_temp.loc[df_temp['ProdID'] != 'D']))\n",
+    "    \n",
+    "    df_temp = df.loc[(df['CustomerID'] == customer) & (df['Qta'] < 0), ['ProdID']].drop_duplicates()\n",
+    "    unique_products_ret.append(len(df_temp.loc[df_temp['ProdID'] != 'D']))\n",
+    "    \n",
+    "    \n",
+    "    # discount are counted in total orders\n",
     "    total_orders.append(len(df.loc[(df['CustomerID'] == customer) & (df['Qta'] > 0), ['BasketID']].drop_duplicates()))\n",
     "    \n",
-    "    df_aux = df.loc[df['CustomerID'] == customer, ['Qta', 'Sale']]\n",
+    "    \n",
+    "    # discount values are useful in meanps and tswr\n",
+    "    # discount values are NOT useful in mps, since they would always be the min value\n",
+    "    # discount values are useful in ts but have to be avoided in tp (not a real product)\n",
+    "    df_aux = df.loc[df['CustomerID'] == customer, ['Qta', 'Sale','ProdID']]\n",
     "    tp = tpr = ts = tswr = 0\n",
     "    mps = []\n",
     "    meanps = []\n",
     "    for _, r in df_aux.iterrows():\n",
     "        cost = r['Qta']*r['Sale']\n",
-    "        tp += r['Qta'] \n",
+    "        tp += r['Qta'] if r['ProdID'] != 'D' else 0\n",
     "        ts += cost\n",
-    "        if r['Qta'] > 0:\n",
+    "        if r['Qta'] > 0 or r['ProdID'] == 'D':\n",
     "            tswr += cost\n",
-    "            mps.append(cost)\n",
     "            meanps.append(r['Sale'])\n",
+    "            if r['Qta'] > 0: # not DISCOUNT\n",
+    "                mps.append(cost)\n",
     "        else:\n",
     "            tpr += 1 # or -r['Qta']\n",
     "            \n",
@@ -282,7 +296,7 @@
     "    total_sale_wret.append(tswr)\n",
     "    min_prod_spent.append(min(mps))\n",
     "    max_prod_spent.append(max(mps))\n",
-    "    mean_prod_sale.append(stat.fmean(meanps)) "
+    "    mean_prod_sale.append(stat.fmean(meanps))"
    ]
   },
   {
@@ -316,20 +330,29 @@
     "order_stats_per_customer = {} # key = customerID, value = list(max_products_order, min, mean_accum, max_spent_order, min, mean_accum, mean_counter) \n",
     "mean_counter = 0\n",
     "data_about_order = df[['BasketID','CustomerID']].drop_duplicates()\n",
+    "\n",
+    "######################################################################################################################################\n",
+    "#what about discount? no sense reasoning about those records if calculating max/min qta/sale, but reasonable to add them in mean calc#\n",
+    "######################################################################################################################################\n",
+    "\n",
     "for _, r in tqdm(data_about_order.iterrows(), total=len(data_about_order), desc=\"Iterating over orders\"):\n",
     "    customer = r[\"CustomerID\"]\n",
     "    order = r[\"BasketID\"]\n",
-    "    df_aux = df.loc[(df['BasketID'] == order) & (df['CustomerID'] == customer), ['Qta','Sale']]  \n",
+    "    df_aux = df.loc[(df['BasketID'] == order) & (df['CustomerID'] == customer), ['Qta','Sale','ProdID']]  \n",
     "    temp_prod = 0\n",
-    "    temp_sale = 0    \n",
+    "    temp_sale = 0 \n",
+    "    \n",
     "    for _, int_r in df_aux.iterrows():\n",
     "        temp_prod += int_r['Qta']\n",
     "        temp_sale += int_r['Qta']*int_r['Sale']\n",
+    "        \n",
     "    is_neg = False\n",
     "    if temp_prod < 0 or temp_sale < 0:\n",
     "        is_neg = True  \n",
+    "    \n",
     "    if customer not in order_stats_per_customer:\n",
     "        order_stats_per_customer[customer] = [math.inf, math.inf, 0, math.inf, math.inf, 0, 0]\n",
+    "        \n",
     "    if not is_neg:\n",
     "        if order_stats_per_customer[customer][0] == math.inf or order_stats_per_customer[customer][0] < temp_prod:\n",
     "            order_stats_per_customer[customer][0] = temp_prod\n",
@@ -339,6 +362,7 @@
     "            order_stats_per_customer[customer][3] = temp_sale\n",
     "        if order_stats_per_customer[customer][4] == math.inf or order_stats_per_customer[customer][4] > temp_sale:\n",
     "            order_stats_per_customer[customer][4] = temp_sale\n",
+    "            \n",
     "    order_stats_per_customer[customer][2] += temp_prod\n",
     "    order_stats_per_customer[customer][5] += temp_sale\n",
     "    order_stats_per_customer[customer][6] += 1"
