--- a/DataUnderstanding_DataPreparation.ipynb
+++ b/DataUnderstanding_DataPreparation.ipynb
@@ -554,7 +554,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80d68d6c801448f8b74cd064f3c56179",
+       "model_id": "1575db9c641d48d9831d3380301267d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -621,7 +621,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30d91bd04f39429493625b154cc07bca",
+       "model_id": "0098d32fec08496790ea696d514bb964",
        "version_major": 2,
        "version_minor": 0
       },
@@ -782,7 +782,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c817946ab4443be8dcc8ce0f732ca72",
+       "model_id": "215475a827a743e580aa3522e3e9cb54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -847,7 +847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fef6b9adbe448088b9194727d90555b",
+       "model_id": "6e3d1d894d934215a467b587cb7acfc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -907,7 +907,7 @@
     }
    },
    "source": [
-    "#### Further checks on entries with a negative quantity:<br>\n",
+    "**Further checks on entries with a negative quantity:<br>**\n",
     "* We assume them to be returned products, but we need to check that every \"negative\" product\n",
     "has a corresponding \"positive\" one. Moreover it's necessary to be sure that the |(quantity * price)| of a\n",
     "returned product is <= of (quantity * price) of a corresponding bought one."
@@ -933,7 +933,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fcfc62a0477d4b85b77c6e2d08c6c96c",
+       "model_id": "f839b1f4d4664586b8c01d5139a04cc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1324,7 +1324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Suspect product IDs analysis"
+    "### Suspect product IDs analysis"
    ]
   },
   {
@@ -1769,8 +1769,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We notice this outliers-like values have some particular values in ProdID: M and DOT\n",
-    "#### And we become curious about the presence of these particular ProdIDs.."
+    "We notice this outliers-like values have some particular values in ProdID: M and DOT<br>\n",
+    "And we become curious about the presence of these particular ProdIDs.."
    ]
   },
   {
@@ -1794,7 +1794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ProdID = BANK CHARGES"
+    "#### _ProdID_ = \"BANK CHARGES\""
    ]
   },
   {
@@ -1858,7 +1858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ProdID = DISCOUNT"
+    "#### _ProdID_ = \"DISCOUNT\""
    ]
   },
   {
@@ -1874,7 +1874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ProdID = DOT"
+    "#### _ProdID_ = \"DOT\""
    ]
   },
   {
@@ -2048,7 +2048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ProdID = POST"
+    "#### _ProdID_ = \"POST\""
    ]
   },
   {
@@ -2222,8 +2222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ProdID = M\n",
-    "\n"
+    "#### _ProdID_ = \"M\""
    ]
   },
   {
@@ -2397,7 +2396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### After analyzing all suspect ProdIDs we take a look at Sale again"
+    "After analyzing all suspect ProdIDs we take a look at Sale again"
    ]
   },
   {
@@ -2543,7 +2542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
