--- a/Hierarchical Clustering.ipynb
+++ b/Hierarchical Clustering.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    " import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
@@ -1008,8 +1008,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
