--- a/CustomerDataset.ipynb
+++ b/CustomerDataset.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Starting dataset\n",
-    "df = pd.read_csv('cleaned_dataframe.csv', sep='\\t', index_col=0)"
+    "df = pd.read_csv('datasets/cleaned_dataframe.csv', sep='\\t', index_col=0)"
    ]
   },
   {
@@ -1165,7 +1165,7 @@
     }
    ],
    "source": [
-    "path = 'customer_dataframe.csv'\n",
+    "path = 'datasets/customer_dataframe.csv'\n",
     "data.to_csv(path, sep='\\t')\n",
     "print(f\"Customer dataframe saved to '{path}'\")"
    ]
