--- a/DataUnderstanding_DataPreparation.ipynb
+++ b/DataUnderstanding_DataPreparation.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('customer_supermarket.csv', sep='\\t', index_col=0)\n",
+    "df = pd.read_csv('datasets/customer_supermarket.csv', sep='\\t', index_col=0)\n",
     "df.drop_duplicates(inplace=True)\n",
     "print(df.head())"
    ]
@@ -1513,7 +1513,7 @@
     }
    ],
    "source": [
-    "path = 'cleaned_dataframe.csv'\n",
+    "path = 'datasets/cleaned_dataframe.csv'\n",
     "df.to_csv(path, sep='\\t')\n",
     "print(f\"Cleaned dataframe saved to '{path}'\")"
    ]
