--- a/Hierarchical Clustering.ipynb
+++ b/Hierarchical Clustering.ipynb
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"customer_dataframe.csv\", sep=\"\\t\", index_col=0)\n",
+    "df = pd.read_csv(\"datasets/customer_dataframe.csv\", sep=\"\\t\", index_col=0)\n",
     "df.head()"
    ]
   },
