--- a/HierarchicalClustering.ipynb
+++ b/HierarchicalClustering.ipynb
@@ -304,7 +304,7 @@
        "      <th>min</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
        "      <td>0.122000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -344,7 +344,7 @@
        "count    4333.000000    4333.000000    4333.000000  4333.000000\n",
        "mean     1129.535657     201.104614     327.882896     3.492819\n",
        "std      4692.695935     274.590134     395.336014     8.997404\n",
-       "min         0.000000       0.000000       0.000000     0.122000\n",
+       "min         0.000000       0.000000      -0.000000     0.122000\n",
        "25%       157.000000      80.500000     155.050000     2.160000\n",
        "50%       370.000000     140.167000     241.900000     2.834000\n",
        "75%       971.000000     237.750000     371.560000     3.712000\n",
@@ -397,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining functions that will be usefull for re-elaborate data and analyze results"
+    "### Defining functions that will be useful for re-elaborate data and analyze results"
    ]
   },
   {
@@ -482,7 +482,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2f56b9d0>"
+       "<matplotlib.lines.Line2D at 0x2da7dac0>"
       ]
      },
      "execution_count": 10,
@@ -601,7 +601,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2f56ba18>"
+       "<matplotlib.lines.Line2D at 0x332e0c40>"
       ]
      },
      "execution_count": 14,
@@ -705,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Avereage - Euclidean"
+    "# Average - Euclidean"
    ]
   },
   {
@@ -718,7 +718,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2f5bf3d0>"
+       "<matplotlib.lines.Line2D at 0x33396988>"
       ]
      },
      "execution_count": 18,
@@ -835,7 +835,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2f75cce8>"
+       "<matplotlib.lines.Line2D at 0x2db462e0>"
       ]
      },
      "execution_count": 22,
@@ -956,7 +956,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2f8c6b98>"
+       "<matplotlib.lines.Line2D at 0x2dcec5c8>"
       ]
      },
      "execution_count": 26,
