--- a/HierarchicalClustering.ipynb
+++ b/HierarchicalClustering.ipynb
@@ -482,7 +482,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x2dadc820>"
+       "<matplotlib.lines.Line2D at 0x2e07c190>"
       ]
      },
      "execution_count": 10,
@@ -621,7 +621,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x33584df0>"
+       "<matplotlib.lines.Line2D at 0x33b43838>"
       ]
      },
      "execution_count": 15,
@@ -738,7 +738,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x334e9340>"
+       "<matplotlib.lines.Line2D at 0x2e0bc880>"
       ]
      },
      "execution_count": 19,
@@ -855,7 +855,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x5ae2a90>"
+       "<matplotlib.lines.Line2D at 0x2df5fe80>"
       ]
      },
      "execution_count": 23,
@@ -976,7 +976,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x333d4f28>"
+       "<matplotlib.lines.Line2D at 0x2e0eb370>"
       ]
      },
      "execution_count": 27,
