--- a/GA.ipynb
+++ b/GA.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"customer_dataframe.csv\", sep=\"\\t\", index_col=0)\n",
+    "df = pd.read_csv(\"datasets/customer_dataframe.csv\", sep=\"\\t\", index_col=0)\n",
     "df_aux = df[['MeanProdOrder', 'MeanSaleOrder', 'MeanPSale']]\n",
     "scaler = MinMaxScaler()\n",
     "X = scaler.fit_transform(df_aux.values)"
