--- a/HierarchicalClustering.ipynb
+++ b/HierarchicalClustering.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"customer_dataframe.csv\", sep=\"\\t\", index_col=0)\n",
+    "df = pd.read_csv(\"datasets/customer_dataframe.csv\", sep=\"\\t\", index_col=0)\n",
     "df.head()"
    ]
   },
